Documentation and ClassDiagram